--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -9,9 +9,9 @@ jobs:
   update:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set Node.js version
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: "14.x"
       - run: npm i -g pnpm
@@ -27,7 +27,7 @@ jobs:
           ( cd ./components/assistive-playwright-tester && pnpm install node-fetch@2.6.7 )
           ( cd ./components/assistive-playwright-tester && pnpm install -D @types/node-fetch@2.6.1 )
       - name: Create pull request
-        uses: peter-evans/create-pull-request@v3.8.0
+        uses: peter-evans/create-pull-request@bd72e1b7922d417764d27d30768117ad7da78a0e # v4.0.2
         with:
           commit-message: Update all dependencies
           branch: dependencies
