--- a/components/assistive-playwright-server/package.json
+++ b/components/assistive-playwright-server/package.json
@@ -30,6 +30,7 @@
     "@rollup/plugin-typescript": "8.3.2",
     "@types/co-body": "6.1.0",
     "@types/http-proxy": "1.17.9",
+    "@types/jest": "27.5.0",
     "@types/node-fetch": "2.6.1",
     "@types/ws": "8.5.3",
     "@types/yargs": "17.0.10",
