--- a/components/vm-providers/package.json
+++ b/components/vm-providers/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@microsoft/api-extractor": "7.23.0",
     "@rollup/plugin-typescript": "8.3.2",
+    "@types/jest": "27.5.0",
     "@types/pngjs": "6.0.1",
     "@types/qrcode": "1.4.2",
     "@types/stream-json": "1.7.2",
