--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
   },
   "scripts": {
     "format": "prettier .",
-    "format:check": "pnpm format -- --check",
-    "format:fix": "pnpm format -- --write",
+    "format:check": "pnpm format --check",
+    "format:fix": "pnpm format --write",
     "lint": "eslint .",
     "apidoc": "api-documenter markdown -i doc/apidoc-input -o doc/apidoc-output",
     "nyc-report": "nyc report --reporter=lcov",
