--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,20 +60,20 @@ jobs:
       - uses: actions/cache@v3
         with:
           path: |
-            ~/.pnpm-store
+            .yarn/cache
             ~/.ms-playwright
-          key: pnpm-${{ hashFiles('pnpm-lock.yaml') }}
+          key: yarn-${{ hashFiles('yarn.lock') }}
           restore-keys: |
-            pnpm-
+            yarn-
       - run: |
-          npm i -g pnpm
+          corepack enable
           echo "PLAYWRIGHT_BROWSERS_PATH=$HOME/.ms-playwright" >> $GITHUB_ENV
-          pnpm config set store-dir ~/.pnpm-store
-      - run: pnpm install --frozen-lockfile
-      - run: pnpm lint
-      - run: pnpm format:check
-      - run: pnpm apidoc
-      - run: pnpm test -r
+      - run: yarn install --immutable
+      - run: yarn workspaces foreach -tv run build
+      - run: yarn lint
+      - run: yarn format:check
+      - run: yarn apidoc
+      - run: yarn workspaces foreach -tv run test
       - name: "Download software"
         run: cd ./vagrant/win10-chromium-nvda && ./download.sh
       - uses: nick-fields/retry@3e91a01664abd3c5cd539100d10d33b9c5b68482 # v2.8.2
@@ -91,7 +91,7 @@ jobs:
           command: |
             export VM_SETTINGS="$(node -e 'console.log(JSON.stringify(require("./vagrant/win10-chromium-nvda/vm-config.json").nvda.vmSettings))')" &&
             . ./vagrant/win10-chromium-nvda/vm-skip-keys.sh &&
-            pnpm nyc-apw-tester -l debug -k $NVDA_SKIP_KEYS --vm-settings '$VM_SETTINGS'
+            yarn nyc-apw-tester -l debug -k $NVDA_SKIP_KEYS --vm-settings "$VM_SETTINGS"
       - uses: nick-fields/retry@3e91a01664abd3c5cd539100d10d33b9c5b68482 # v2.8.2
         name: "test assistive-playwright (jaws, chromium)"
         with:
@@ -100,11 +100,11 @@ jobs:
           command: |
             export VM_SETTINGS="$(node -e 'console.log(JSON.stringify(require("./vagrant/win10-chromium-nvda/vm-config.json").jaws.vmSettings))')" &&
             . ./vagrant/win10-chromium-nvda/vm-skip-keys.sh &&
-            pnpm nyc-apw-tester -l debug -k $JAWS_SKIP_KEYS --vm-settings '$VM_SETTINGS'
-      - run: pnpm nyc-apw-test
+            yarn nyc-apw-tester -l debug -k $JAWS_SKIP_KEYS --vm-settings "$VM_SETTINGS"
+      - run: yarn nyc-apw-test
         name: "test assistive-playwright-test"
       - run: |
-          pnpm nyc-awd-server -l debug -c ./vagrant/win10-chromium-nvda/vm-config.json --pid-file assistive-webdriver.pid &> assistive-webdriver.log &
+          yarn nyc-awd-server -l debug -c ./vagrant/win10-chromium-nvda/vm-config.json --pid-file assistive-webdriver.pid &> assistive-webdriver.log &
           while ! nc -z 127.0.0.1 3000; do sleep 1; done
         name: "Start assistive-webdriver server"
       - uses: nick-fields/retry@3e91a01664abd3c5cd539100d10d33b9c5b68482 # v2.8.2
@@ -114,7 +114,7 @@ jobs:
           max_attempts: 5
           command: |
             . ./vagrant/win10-chromium-nvda/vm-skip-keys.sh &&
-            pnpm nyc-awd-tester -m nvda -k $NVDA_SKIP_KEYS -l debug
+            yarn nyc-awd-tester -m nvda -k $NVDA_SKIP_KEYS -l debug
       - uses: nick-fields/retry@3e91a01664abd3c5cd539100d10d33b9c5b68482 # v2.8.2
         name: "test assistive-webdriver (jaws, chromium)"
         with:
@@ -122,7 +122,7 @@ jobs:
           max_attempts: 5
           command: |
             . ./vagrant/win10-chromium-nvda/vm-skip-keys.sh &&
-            pnpm nyc-awd-tester -m jaws -k $JAWS_SKIP_KEYS -l debug
+            yarn nyc-awd-tester -m jaws -k $JAWS_SKIP_KEYS -l debug
       - run: |
           ASSISTIVE_WEBDRIVER_PID=$(cat ./assistive-webdriver.pid)
           echo "Sending SIGINT to $ASSISTIVE_WEBDRIVER_PID"
@@ -135,17 +135,17 @@ jobs:
         if: ${{ always() }}
       - run: cat vboxwebsrv.log
         if: ${{ always() }}
-      - run: pnpm nyc-report
+      - run: yarn nyc-report
         if: matrix.ENABLE_COVERAGE == '1'
       - uses: codecov/codecov-action@d9f34f8cd5cb3b3eb79b3e4b5dae3a16df499a70 #v3.1.1
         with:
           file: ./coverage/lcov.info
         if: matrix.ENABLE_COVERAGE == '1'
       - if: matrix.ENABLE_COVERAGE == '0' && github.event_name == 'push' && startsWith(github.ref, 'refs/tags/release/')
-        name: pnpm publish
+        name: yarn publish
         run: |
           echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
-          pnpm publish -r --no-git-checks
+          yarn workspaces foreach -tv npm publish --tolerate-republish
       - if: matrix.ENABLE_COVERAGE == '0' && github.event_name == 'push' && startsWith(github.ref, 'refs/tags/release/')
         uses: actions/checkout@v3
         with:
