--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,12 @@ node_modules
 /components/vm-providers/src/config.ts
 /doc/apidoc-output
 test-reports
+
+# https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored (not using Zero-Installs):
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
