--- a/components/assistive-playwright-client/package.json
+++ b/components/assistive-playwright-client/package.json
@@ -36,6 +36,7 @@
     "assistive-playwright-server": "workspace:*",
     "jest": "29.3.1",
     "node-fetch": "3.3.0",
+    "nyc": "15.1.0",
     "rollup": "3.5.1",
     "tslib": "2.4.1",
     "typescript": "4.9.3",
@@ -48,8 +49,8 @@
     "ws": "8.11.0"
   },
   "scripts": {
-    "prepare": "pnpm build",
-    "build": "node ../../tools/clean && pnpm build:rollup && pnpm build:dts && pnpm build:api",
+    "prepack": "yarn build",
+    "build": "node ../../tools/clean && yarn build:rollup && yarn build:dts && yarn build:api",
     "build:rollup": "rollup --failAfterWarnings -c",
     "build:dts": "tsc -p tsconfig.d.json",
     "build:api": "api-extractor run --config ./api-extractor.json --verbose",
