--- a/components/assistive-playwright-server/package.json
+++ b/components/assistive-playwright-server/package.json
@@ -35,6 +35,7 @@
     "@types/yargs": "17.0.15",
     "jest": "29.3.1",
     "node-fetch": "3.3.0",
+    "nyc": "15.1.0",
     "rollup": "3.5.1",
     "tslib": "2.4.1",
     "typescript": "4.9.3",
@@ -42,10 +43,10 @@
     "wait-port": "1.0.4"
   },
   "scripts": {
-    "prepare": "pnpm build",
+    "prepack": "yarn build",
     "build:validation": "node ./generateValidation",
     "build:rollup": "rollup --failAfterWarnings -c",
-    "build": "node ../../tools/clean && pnpm build:validation && pnpm build:rollup",
+    "build": "node ../../tools/clean && yarn build:validation && yarn build:rollup",
     "test": "nyc --cwd ../.. jest"
   },
   "license": "MIT"
