--- a/package.json
+++ b/package.json
@@ -10,27 +10,33 @@
     "babel-plugin-istanbul": "6.1.1",
     "eslint": "8.28.0",
     "eslint-config-prettier": "8.5.0",
+    "jest": "29.3.1",
     "jest-environment-node": "29.3.1",
     "nyc": "15.1.0",
     "prettier": "2.8.0",
-    "ts-jest": "29.0.3"
+    "ts-jest": "29.0.3",
+    "typescript": "4.9.3"
   },
   "scripts": {
     "format": "prettier .",
-    "format:check": "pnpm format --check",
-    "format:fix": "pnpm format --write",
+    "format:check": "yarn format --check",
+    "format:fix": "yarn format --write",
     "lint": "eslint .",
     "apidoc": "api-documenter markdown -i doc/apidoc-input -o doc/apidoc-output",
     "nyc-report": "nyc report --reporter=lcov",
     "nyc-awd-server": "nyc node components/assistive-webdriver/dist/server/bin.js",
     "nyc-awd-tester": "nyc node components/assistive-webdriver/dist/tester.js",
     "nyc-apw-tester": "nyc node components/assistive-playwright-tester/dist/index.js",
-    "nyc-apw-test": "nyc node components/assistive-playwright-test-sample/node_modules/@playwright/test/cli.js test -c components/assistive-playwright-test-sample"
+    "nyc-apw-test": "nyc node node_modules/@playwright/test/cli.js test -c components/assistive-playwright-test-sample"
   },
   "nyc": {
     "instrument": false,
     "sourceMap": false,
     "silent": true,
     "clean": false
-  }
+  },
+  "packageManager": "yarn@3.3.0",
+  "workspaces": [
+    "components/*"
+  ]
 }
