--- a/components/assistive-webdriver/package.json
+++ b/components/assistive-webdriver/package.json
@@ -38,7 +38,6 @@
     "koa": "2.13.4",
     "koa-route": "3.2.0",
     "node-fetch": "2.6.7",
-    "p-queue": "6.6.2",
     "uuid": "9.0.0",
     "vm-providers": "workspace:*",
     "winston": "3.8.2",
@@ -47,6 +46,8 @@
   },
   "devDependencies": {
     "@microsoft/api-extractor": "7.33.6",
+    "@rollup/plugin-commonjs": "23.0.3",
+    "@rollup/plugin-node-resolve": "15.0.1",
     "@rollup/plugin-typescript": "10.0.1",
     "@sinonjs/fake-timers": "10.0.0",
     "@types/co-body": "6.1.0",
@@ -63,6 +64,7 @@
     "@types/yargs": "17.0.15",
     "jest": "29.3.1",
     "json-schema-to-typescript": "11.0.2",
+    "p-queue": "6.6.2",
     "pngjs": "6.0.0",
     "rollup": "3.5.0",
     "selenium-webdriver": "4.6.1",
