Updating p-queue and node-fetch

--- a/components/assistive-playwright-client/package.json
+++ b/components/assistive-playwright-client/package.json
@@ -26,20 +26,22 @@
   ],
   "devDependencies": {
     "@microsoft/api-extractor": "7.33.6",
+    "@rollup/plugin-commonjs": "23.0.3",
+    "@rollup/plugin-node-resolve": "15.0.1",
+    "@rollup/plugin-typescript": "10.0.1",
     "@types/jest": "29.2.3",
-    "@types/node-fetch": "2.6.2",
     "@types/pngjs": "6.0.1",
     "@types/uuid": "9.0.0",
     "@types/ws": "8.5.3",
     "assistive-playwright-server": "workspace:*",
     "jest": "29.3.1",
+    "node-fetch": "3.3.0",
     "rollup": "3.5.1",
     "tslib": "2.4.1",
     "typescript": "4.9.3",
     "wait-port": "1.0.4"
   },
   "dependencies": {
-    "node-fetch": "2.6.7",
     "playwright-core": "1.28.1",
     "uuid": "9.0.0",
     "vm-providers": "workspace:*",
