--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "devDependencies": {
     "@babel/core": "7.20.5",
     "@babel/plugin-syntax-typescript": "7.20.0",
+    "@babel/plugin-transform-modules-commonjs": "7.19.6",
     "@microsoft/api-documenter": "7.19.25",
     "@typescript-eslint/eslint-plugin": "5.45.0",
     "@typescript-eslint/parser": "5.45.0",
